변환하기 수정