@@ -61,12 +61,10 @@ public class TextService {
     private String wavBucket = "test-wav"; //kms 키 없는 버킷.
     private String scriptBucket = "script-file-bucket";
 
-    String currentDir = ".";
-
     @Transactional
     public List<TextResponseDto> videoToScript(String youtubeUrl) {
         String filePath = getAudioFileFromYoutubeUrl(youtubeUrl);   // "mp3/파일이름.mp3"
-        String objectStorageDataKey = uploadFile(currentDir+"/mp3/" + filePath); //파일이름.mp3
+        String objectStorageDataKey = uploadFile("mp3/" + filePath); //파일이름.mp3
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
@@ -112,7 +110,7 @@ public class TextService {
 
         subtitleService.saveSubtitle(result, script);
 
-        File file = new File(currentDir+"/mp3/" + objectStorageDataKey);
+        File file = new File("mp3/" + objectStorageDataKey);
         boolean isDeleted = file.delete();
 
         log.info("파일 삭제: {}", isDeleted);
@@ -148,7 +146,7 @@ public class TextService {
 
         return key; //mp3 파일 이름
     }
-    
+
     @Transactional
     public List<TextResponseDto> getScriptFromBucket(Script script){ //key가 파일명
         String fileName = script.getScriptTitle();
@@ -261,41 +259,15 @@ public class TextService {
     public String getAudioFileFromYoutubeUrl(String youtubeUrl){
         String filename = "mp3 파일 가져오기 실패.";
 
-        //yt-dlp 파일 실행 위치.
-        String ytDlpPath = "yt-dlp";
-
-
-
         try {
-            currentDir = executeCommand("pwd");
-            log.info("current working dir: {}", currentDir);
 
-            //mp3 파일 저장 경로. 서버 상에 경로 지정.
-            String downloadDir = currentDir+"/mp3/%(title)s.%(ext)s";
-
-            // Command to download video
-            String downloadCommand = String.format("%s -x --audio-format mp3 -o \"%s\" %s", ytDlpPath, downloadDir, youtubeUrl);
-
-            // Command to print filename
-            String printCommand = String.format("%s --print filename -o \"%s\" %s", ytDlpPath, downloadDir, youtubeUrl);
-
-
-
-
-            executeCommand(downloadCommand);
-
-            filename = executeCommand(printCommand);
-
-            if (filename != null) {
-                String ext = filename.substring(filename.lastIndexOf("."));
-                filename = filename.replace(ext, ".mp3");
-            }
+            executeCommand(youtubeUrl);
 
         } catch (IOException | InterruptedException e) {
             e.printStackTrace();
         }
 
-        String DATA_DIRECTORY = currentDir+"/mp3/";
+        String DATA_DIRECTORY = "mp3/";
         File dir = new File(DATA_DIRECTORY);
 
         if (dir.exists() && dir.isDirectory()) {
@@ -319,16 +291,44 @@ public class TextService {
         return filename;
     }
 
-    private String executeCommand(String command) throws IOException, InterruptedException {
-        Process process = Runtime.getRuntime().exec(command);
-        BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-        String line;
-        int i = 0;
+    private String executeCommand(String youtubeUrl) throws IOException, InterruptedException {
+
+        ProcessBuilder processBuilder = new ProcessBuilder();
+        processBuilder.command("/usr/local/bin/yt-dlp", "-x", "--audio-format", "mp3", "-o", "'%(title)s.%(ext)s'", youtubeUrl);
         String filename = null;
-        while ((line = reader.readLine()) != null) {
-            filename = line;
+        try {
+            processBuilder.directory(new java.io.File("./mp3"));  // 원하는 작업 디렉토리로 변경
+
+            Process process = processBuilder.start();
+            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+
+
+            String line;
+            while ((line = reader.readLine()) != null) {
+                filename = line;
+            }
+            log.info("command: {}", filename);
+
+            // 에러 출력
+            BufferedReader errorReader = new BufferedReader(new InputStreamReader(process.getErrorStream(), "EUC-KR"));
+            String errorLine;
+            while ((errorLine = errorReader.readLine()) != null) {
+                System.err.println(errorLine);
+            }
+
+
+            int exitCode = process.waitFor();
+            if (exitCode == 0) {
+                System.out.println("Download completed successfully!");
+            } else {
+                System.err.println("다운로드 실패 Download failed with exit code " + exitCode);
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+            Thread.currentThread().interrupt();
         }
-        process.waitFor();
 
         return filename;
     }
